<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/linear_palette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linear_palette2">

        <TextView
            android:id="@+id/custom_palette"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/home_palette_bg"
            android:drawableTop="@drawable/custom_palette"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/custom_palette" />

        <TextView
            android:id="@+id/harmonic_palette"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/home_palette_bg"
            android:drawableTop="@drawable/harmonic_palette"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/harmonic_palette" />

        <TextView
            android:id="@+id/image_palette"
            android:layout_width="98dp"
            android:layout_height="98dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/home_palette_bg"
            android:drawableTop="@drawable/image_palette"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/image_palette" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_palette2"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/my_palette"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/dp_16"
            android:background="@drawable/home_palette_bg2"
            android:drawableTop="@drawable/my_palette"
            android:gravity="center"
            android:text="@string/my_palette"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="@dimen/dp_16"
            android:background="@drawable/home_palette_bg2"
            android:layout_gravity="center"
            android:drawableTop="@drawable/favourites"
            android:gravity="center"
            android:text="@string/favourites"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/settings"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:padding="@dimen/dp_16"
            android:background="@drawable/home_palette_bg2"
            android:gravity="center"
            android:text="@string/settings"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>