<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="adpter"
            type="com.story.creator.picker.adapter.ColorAdapter" />
    </data>

    <LinearLayout
        android:id="@+id/coordinator_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/close" />

            <ImageView
                android:id="@+id/pic_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/save"
                android:padding="8dp"
                android:src="@drawable/album" />

            <ImageView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/more"
                android:padding="8dp"
                android:src="@drawable/save" />

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/more" />
        </RelativeLayout>

        <EditText
            android:id="@+id/name_palette"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginEnd="41dp"
            android:hint="@string/name"
            android:textColor="@color/edit_text" />

        <RelativeLayout
            android:id="@+id/select_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/select_img_bg">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/picturre" />

            <TextView
                android:id="@+id/select_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/picture"
                android:layout_centerHorizontal="true"
                android:text="@string/select_image" />

            <ImageView
                android:id="@+id/img_src"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/rgb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/rgb_selector" />

            <ImageView
                android:id="@+id/ral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                android:src="@drawable/ral_selector" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_76"
                android:layout_marginEnd="@dimen/dp_8"
                android:src="@drawable/quantiyy"/>

            <TextView
                android:id="@+id/quantity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/quantity"
                android:text="@string/quantity"/>

            <EditText
                android:id="@+id/color_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_below="@+id/quantity_text"
                android:layout_toStartOf="@+id/apply"
                android:layout_toEndOf="@+id/code" />

            <TextView
                android:id="@+id/apply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="90dp"
                android:text="@string/apply"
                android:textSize="@dimen/dp_16" />
        </RelativeLayout>
    </LinearLayout>

</layout>