<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rgb_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/r_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/h_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/r_color_seek_bar"
        android:layout_width="0dp"
        android:layout_height="9dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:max="255"
        android:maxHeight="9dp"
        android:minHeight="9dp"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:outlineSpotShadowColor="@color/colorPrimary"
        android:padding="8dp"
        app:layout_constraintEnd_toStartOf="@+id/r_value"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/r_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/r_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:layout_marginEnd="@dimen/dp_24"
        android:text="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/g_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/s_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/r_color_seek_bar" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/g_color_seek_bar"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="43dp"
        android:max="255"
        android:maxHeight="8dp"
        android:minHeight="8dp"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:outlineSpotShadowColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/g_value"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/g_text"
        app:layout_constraintTop_toBottomOf="@+id/r_color_seek_bar" />

    <TextView
        android:id="@+id/g_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="@dimen/dp_24"
        android:text="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_color_seek_bar" />

    <TextView
        android:id="@+id/b_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="@dimen/dp_8"
        android:text="@string/v_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/g_color_seek_bar" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/b_color_seek_bar"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="43dp"
        android:max="255"
        android:maxHeight="8dp"
        android:minHeight="8dp"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:outlineSpotShadowColor="@color/colorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/b_value"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/b_text"
        app:layout_constraintTop_toBottomOf="@+id/g_color_seek_bar" />

    <TextView
        android:id="@+id/b_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="@dimen/dp_24"
        android:text="255"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g_color_seek_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>